<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/repoDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/repo_detail_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repoDetailNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Repo name"
        app:layout_constraintStart_toStartOf="@+id/repoDetailName"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailName" />

    <TextView
        android:id="@+id/repoDetailAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/repo_detail_author"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailNameValue" />

    <TextView
        android:id="@+id/repoDetailAuthorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="Author value"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailAuthor"
        app:layout_constraintStart_toStartOf="@+id/repoDetailAuthor" />

    <TextView
        android:id="@+id/repoDetailUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/repo_detail_url"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailAuthorValue" />

    <TextView
        android:id="@+id/repoDetailUrlValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="url value"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailUrl"
        app:layout_constraintStart_toStartOf="@+id/repoDetailUrl" />

    <TextView
        android:id="@+id/repoDetailDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/repo_detail_description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailUrlValue" />

    <TextView
        android:id="@+id/repoDetailDescriptionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="description value"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailDescription"
        app:layout_constraintStart_toStartOf="@+id/repoDetailDescription" />

    <TextView
        android:id="@+id/repoDetailLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/repo_detail_language"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailDescriptionValue" />

    <TextView
        android:id="@+id/repoDetailLangValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="language value"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailLang"
        app:layout_constraintStart_toStartOf="@+id/repoDetailLang" />

    <TextView
        android:id="@+id/repoDetailStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/repo_detail_stars"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailLangValue" />

    <TextView
        android:id="@+id/repoDetailStarsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="stars value"
        app:layout_constraintTop_toBottomOf="@+id/repoDetailStars"
        app:layout_constraintStart_toStartOf="@+id/repoDetailStars" />

</androidx.constraintlayout.widget.ConstraintLayout>